# sup-linux

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  build.sh  fix-sudo.sh  install.sh  linuxsup-pam-wrapper  test_complete.rs  test_msg_size.rs  uninstall.sh
configs/: face-auth-default.toml  face-auth-system.toml  face-auth.toml
pam-configs/: suplinux
pam_module/: Cargo.toml
pam_module/src/: lib.rs
src/: ascii_preview.rs  auth.rs  camera.rs  config.rs  detector.rs  dev_mode.rs  lib.rs  main.rs  paths.rs  protocol.rs  quality.rs  recognizer.rs  service_client.rs  storage.rs  visualization.rs
src/camera/: mod.rs  v4l2.rs
src/cli/: ascii_preview.rs  mod.rs  visualization.rs
src/common/: config.rs  dev_mode.rs  error.rs  mod.rs  paths.rs
src/core/: auth.rs  detector.rs  mod.rs  quality.rs  recognizer.rs
src/service/: client.rs  mod.rs  protocol.rs
src/storage/: mod.rs  user_store.rs
systemd/: linuxsup-embedding.service  suplinux.service
