[workspace]
members = [".", "pam_module"]

[package]
name = "linux_sup"
version = "0.1.0"
edition = "2021"

[lib]
name = "linux_sup"
path = "src/lib.rs"

[[bin]]
name = "linuxsup"
path = "src/main.rs"

[[bin]]
name = "linuxsup-embedding-service"
path = "src/bin/embedding_service.rs"

[dependencies]
# Core
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Face recognition
ort = { version = "1.16", features = ["load-dynamic"] }
ndarray = "0.15"
image = "0.24"
imageproc = "0.23"

# Camera
v4l = "0.14"

# Storage
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
directories = "5.0"
dirs = "5.0"

# System
libc = "0.2"

# Config
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utils
chrono = "0.4"
crossterm = "0.27"

# Security
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"

# IPC
serde_json = "1.0"

# Visualization (optional)
plotters = { version = "0.3", optional = true }
nalgebra = { version = "0.32", optional = true }

[features]
default = []
visualization = ["plotters", "nalgebra"]

[profile.release]
lto = true
codegen-units = 1