[package]
name = "pam_suplinux"
version = "0.1.0"
edition = "2021"

[lib]
name = "pam_suplinux"
crate-type = ["cdylib"]

[dependencies]
pamsm = { version = "0.5", features = ["libpam"] }
sup_linux = { path = ".." }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
dirs = "5.0"